--- a/theme.css
+++ b/theme.css
@@ -7,7 +7,7 @@ body {
   color: #fff;
   font-family: sans-serif;
   font-size: 16px;
-  margin: 0;
+  margin: 16px;
 }
 
 @media screen and (min-width: 1440px) {
